[package]
name = "messenger-fs"
version = "0.1.0"
authors = ["davlia <davidliao96@gmail.com>"]

[dependencies]
fuse = "0.3"
time = "0.1.40"
libc = "0.2.42"
failure = "0.1.1"
hyper = "0.12"
hyper-tls = "0.3.0"
tokio = "0.1.7"
reqwest = "0.8.6"
serde = "1.0.70"
serde_derive = "1.0"
serde_json = "1.0"
tarpc = "0.12.0"
tarpc-plugins = "0.4.0"
jsonrpc-client-core = "0.5.0"
jsonrpc-client-http = "0.5.0"
regex = "1"
lazy_static = "1.0"
zstd = "0.4"
